finishes first draft of html template

--- a/index.html
+++ b/index.html
@@ -5,5 +5,40 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Shopping List</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="shoplist-main-container">
+			<div class="shoplist-input-container">
+				<h1>Add an item</h1>
+				<div class="shoplist-entry-container">
+					<input type="text" />
+					<button>Add To List</button>
+				</div>
+			</div>
+			<div class="shoplist-list-container">
+				<div class="shoplist-col-titles">
+					<h3 class="hdr-item">Item</h3>
+					<h3 class="hdr-qty">Quantity</h3>
+				</div>
+				<!-- LIST ITEM TEMPLATES REMOVE AFTER JS -->
+				<div class="list-item" id="1541254">
+					<h2>Apples</h2>
+					<div class="item-counter-component">
+						<h2 class="sub">-</h2>
+						<h2 class="itemCount" id="1094857109483">3</h2>
+						<h2 class="add">+</h2>
+					</div>
+					<p class="trash">TRASH</p>
+				</div>
+				<div class="list-item" id="1541254">
+					<h2>Pineapple</h2>
+					<div class="item-counter-component">
+						<h2 class="sub">-</h2>
+						<h2 class="itemCount" id="1094857109483">6</h2>
+						<h2 class="add">+</h2>
+					</div>
+					<p class="trash">TRASH</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
