completes needed css to begin js func

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Shopping List</title>
+		<link rel="stylesheet" href="/shopList/css/shoplist.css" />
 	</head>
 	<body>
 		<div class="shoplist-main-container">
@@ -17,7 +18,7 @@
 			<div class="shoplist-list-container">
 				<div class="shoplist-col-titles">
 					<h3 class="hdr-item">Item</h3>
-					<h3 class="hdr-qty">Quantity</h3>
+					<h3 class="hdr-qty">QTY</h3>
 				</div>
 				<!-- LIST ITEM TEMPLATES REMOVE AFTER JS -->
 				<div class="list-item" id="1541254">
@@ -41,4 +42,5 @@
 			</div>
 		</div>
 	</body>
+	<script src="/shopList/js/shoplist.js"></script>
 </html>
